--- a/roles/certs-authority/tasks/generate-client.yaml
+++ b/roles/certs-authority/tasks/generate-client.yaml
@@ -1,6 +1,12 @@
 ---
 # Playbook to ensure docker is installed
 
+- name: ensure certificate directory exists
+  file:
+    path:             "{{ certs_directory }}"
+    state:            directory
+    mode:             0755
+    
 - name: CA generate client keys - ensure we certify the right node
   set_fact:
     host_to_certify:  "{{ item | default( inventory_hostname ) }}"
@@ -8,7 +14,7 @@
 - name: CA generate client keys - ensure the openssl configuration is present
   blockinfile:
     create:           yes
-    dest:             "{{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.openssl.cnf"
+    dest:             "{{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.openssl.cnf"
     marker:           "#{mark} {{ playbook_name }}"
     block: |
                       [req]
@@ -26,16 +32,16 @@
   copy:
     directory_mode:   0755
     src:              "{{ client_privatekey_filepath }}"
-    dest:             "{{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.privatekey.key"
+    dest:             "{{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.privatekey.key"
 
 - name: CA generate client keys - checking if client private key exists
   stat:
-    path:             "{{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.privatekey.key"
+    path:             "{{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.privatekey.key"
   register:           client_privatekey_exist
 
 - name: CA generate client keys - generate client private key if it does not exist already
   when:               client_privatekey_exist.stat.exists == False
-  shell:              "openssl genrsa -out {{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.privatekey.key {{ key_size }}"
+  shell:              "openssl genrsa -out {{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.privatekey.key {{ key_size }}"
 
 ## Certificate Request management
 - name: CA generate client keys - upload Certificate Request if it's passed as parameter client_csr_filepath=
@@ -43,18 +49,18 @@
   copy:
     directory_mode:   0755
     src:              "{{ client_csr_filepath }}"
-    dest:             "{{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.csr"
+    dest:             "{{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.csr"
 
 - name: CA generate client keys - checking if Certificate Request exists
   stat:
-    path:             "{{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.csr"
+    path:             "{{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.csr"
   register:           client_csr_exist
 
 - name: CA generate client keys - generate Certificate Request if does not exist already
   when:               client_csr_exist.stat.exists == False
-  shell:              "openssl req -new -key {{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.privatekey.key \
-                        -out {{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.csr \
-                        -config {{ certs_directory }}{{ playbook_name }}-{{ host_to_certify }}-client.openssl.cnf \
+  shell:              "openssl req -new -key {{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.privatekey.key \
+                        -out {{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.csr \
+                        -config {{ certs_directory }}{{ master_role }}-{{ host_to_certify }}-client.openssl.cnf \
                         -subj '/CN={{ master_role }}-{{ host_to_certify | md5 }}-client'"
 
 - name: CA generate client keys - generate the Client certificate
