--- a/roles/certs-authority/tasks/generate_from_csr.yaml
+++ b/roles/certs-authority/tasks/generate_from_csr.yaml
@@ -17,15 +17,15 @@
 
 - name: CA generate key -- check if Certificate already exists
   stat:
-    path:             "{{ certs_directory }}{{ playbook_name }}-{{ host_to_sign }}-{{ request_type }}.publickey.crt"
+    path:             "{{ certs_directory }}{{ master_role }}-{{ host_to_sign }}-{{ request_type }}.publickey.crt"
   register:           certificate_exist
 
 - name: CA generate key -- if the certificate doesn't exist already, generate it
   when:               certificate_exist.stat.exists == False
-  shell:              "openssl x509 -req -in {{ certs_directory }}{{ playbook_name }}-{{ host_to_sign }}-{{ request_type }}.csr \
-                        -CA {{ certs_directory }}{{ playbook_name }}-CA.publickey.crt \
-                        -CAkey {{ certs_directory }}{{ playbook_name }}-CA.privatekey.key \
+  shell:              "openssl x509 -req -in {{ certs_directory }}{{ master_role }}-{{ host_to_sign }}-{{ request_type }}.csr \
+                        -CA {{ certs_directory }}{{ master_role }}-CA.publickey.crt \
+                        -CAkey {{ certs_directory }}{{ master_role }}-CA.privatekey.key \
                         -CAcreateserial \
-                        -out {{ certs_directory }}{{ playbook_name }}-{{ host_to_sign }}-{{ request_type }}.publickey.crt -days 365 \
+                        -out {{ certs_directory }}{{ master_role }}-{{ host_to_sign }}-{{ request_type }}.publickey.crt -days 365 \
                         -extensions v3_req \
-                        -extfile {{ certs_directory }}{{ playbook_name }}-{{ host_to_sign }}-{{ request_type }}.openssl.cnf"
+                        -extfile {{ certs_directory }}{{ master_role }}-{{ host_to_sign }}-{{ request_type }}.openssl.cnf"
