--- a/roles/docker-registry/tasks/main.yaml
+++ b/roles/docker-registry/tasks/main.yaml
@@ -14,14 +14,6 @@
   set_fact:
     os_docker_registry_ip:              "{{ hostvars[ os_docker_registry ].privateIPv4 }}"
 
-- name: share full adress of Docker Registry
-  set_fact:
-    os_docker_registry_fullname:        "{{ os_docker_registry_ip }}{{ ( ( registry_public_port | int ) == 443 ) | ternary( '', ':' + ( registry_public_port | string ) ) }}"
-
-- name: show it
-  debug:
-    msg: "{{ os_docker_registry_fullname }}"
-
 - name: get your cloud authentication info to push to the Docker Registry swift storage driver
   connection:                           local
   os_client_config:
@@ -37,6 +29,7 @@
     os_auth_region_name:                "{{ openstack.clouds[ 0 ].region_name }}"
 
 - name: generate Docker Registry certificate from CA
+  when:                                 inventory_hostname == os_docker_registry
   include_role:
     name:                               certs-authority
     tasks_from:                         generate-server
@@ -50,39 +43,52 @@
     pull:                               true
     restart_policy:                     always
     volumes:
-      - "{{ certs_directory }}:/certs"
+      - "{{ certs_directory }}:{{ certs_directory }}"
     ports:
       - "{{ registry_public_port }}:{{ registry_private_port }}"
     env:
       REGISTRY_STORAGE:                 swift
-      REGISTRY_HTTP_TLS_CERTIFICATE:    "certs/{{ playbook_name }}-{{ inventory_hostname }}-server.publickey.crt"
-      REGISTRY_HTTP_TLS_KEY:            "certs/{{ playbook_name }}-{{ inventory_hostname }}-server.privatekey.key"
-      REGISTRY_HTTP_TLS_CLIENTCAS_0:    "certs/{{ playbook_name }}-CA.publickey.crt"
       REGISTRY_STORAGE_SWIFT_USERNAME:  "{{ os_auth_params.username }}"
       REGISTRY_STORAGE_SWIFT_PASSWORD:  "{{ os_auth_params.password }}"
       REGISTRY_STORAGE_SWIFT_AUTHURL:   "{{ os_auth_params.auth_url }}"
       REGISTRY_STORAGE_SWIFT_TENANT:    "{{ os_auth_params.project_name }}"
       REGISTRY_STORAGE_SWIFT_DOMAIN:    "{{ os_auth_params.project_domain_name }}"
       REGISTRY_STORAGE_SWIFT_REGION:    "{{ os_auth_region_name }}"
-      REGISTRY_STORAGE_SWIFT_CONTAINER: "{{ playbook_name }}"
+      REGISTRY_STORAGE_SWIFT_CONTAINER: "{{ master_role }}"
       REGISTRY_STORAGE_SWIFT_INSECURESKIPVERIFY: yes
+      REGISTRY_HTTP_TLS_CERTIFICATE:    "{{ certs_directory }}{{ master_role }}-{{ inventory_hostname }}-server.publickey.crt"
+      REGISTRY_HTTP_TLS_KEY:            "{{ certs_directory }}{{ master_role }}-{{ inventory_hostname }}-server.privatekey.key"
+      REGISTRY_HTTP_TLS_CLIENTCAS_0:    "{{ certs_directory }}{{ master_role }}-CA.publickey.crt"
+
+- name: ensure Docker Registry is not launched in any other node
+  when:                                 inventory_hostname != os_docker_registry
+  docker_container:
+    name:                               registry
+    image:                              registry:2
+    state:                              absent
 
 - name: fetch Docker Registry certificate
   run_once:                             true
   delegate_to:                          "{{ os_docker_registry }}"
   fetch:
     flat:                               yes
-    src:                                "{{ certs_directory }}{{ playbook_name }}-{{ os_docker_registry }}-CA.publickey.crt"
+    src:                                "{{ certs_directory }}{{ master_role }}-{{ os_docker_registry }}-CA.publickey.crt"
     dest:                               config/data/
+
+- name: list all registry names
+  set_fact:
+    os_docker_registry_names:           "{{ [ os_docker_registry_ip ] }} + {{ os_docker_registry_dnsnames | default( [] ) }}"
 
 - name: ensure Docker Registry config directory exists
   file:
     mode:                               0755
     state:                              directory
-    path:                               "/etc/docker/certs.d/{{ os_docker_registry_fullname }}"
+    path:                               "/etc/docker/certs.d/{{ item + ( ( registry_public_port | int ) == 443 ) | ternary( '', ':' + ( registry_public_port | string ) )}}"
+  with_items:                           "{{ [ os_docker_registry_ip ] + ( os_docker_registry_dnsnames | default( [] ) ) }}"
 
 - name: copy Docker Registry certificate to client nodes
   copy:
     directory_mode:                     0755
-    src:                                "config/data/{{ playbook_name }}-CA.publickey.crt"
-    dest:                               "/etc/docker/certs.d/{{ os_docker_registry_fullname }}/ca.crt"
+    src:                                "config/data/{{ master_role }}-CA.publickey.crt"
+    dest:                               "/etc/docker/certs.d/{{ item }}/ca.crt"
+  with_items:                           "{{ [ os_docker_registry_ip ] + ( os_docker_registry_dnsnames | default( [] ) ) }}"
