--- a/roles/docker-registry/defaults/main.yaml
+++ b/roles/docker-registry/defaults/main.yaml
@@ -1,7 +1,9 @@
 #node counting and balancing
-node_number:                    "{{ node_count                          | default( ( ( public_node_count | default( 1 ) ) | int ) + ( ( private_node_count | default( 0 ) ) | int ) ) }}"
-public_node_number:             "{{ public_node_count                   | default( ( node_number | int ) - ( ( private_node_count | default( 0 ) ) | int ) ) }}"
-private_node_number:            "{{ private_node_count                  | default( ( node_number | int ) - ( ( ( public_node_number > 0 ) | ternary( public_node_number, 1 ) ) | int ) ) }}"
+default_public_count:           1
+default_private_count:          0
+node_number:                    "{{ node_count                          | default( ( ( public_node_count | default( default_public_count ) ) | int ) + ( ( private_node_count | default( default_private_count ) ) | int ) ) }}"
+public_node_number:             "{{ public_node_count                   | default( ( node_number | int ) - ( ( private_node_count | default( default_private_count ) ) | int ) ) }}"
+private_node_number:            "{{ private_node_count                  | default( ( node_number | int ) - ( ( ( public_node_number > 0 ) | ternary( public_node_number, default_public_count ) ) | int ) ) }}"
 
 #if there's private node, we default on selecting the last private node as the registry
 os_docker_registry_exposition:  "{{ ( ( ( groups[ master_role + '-private_nodes' ] | default( [] ) ) | length ) > 0 ) | ternary( master_role + '-private_nodes', master_role + '-public_nodes' ) }}"
