--- a/roles/rancher/defaults/main.yaml
+++ b/roles/rancher/defaults/main.yaml
@@ -1,4 +1,6 @@
 #node counting and balancing
-node_number:                    "{{ node_count                          | default( 1 ) }}"
-public_node_number:             "{{ ( public_node_count is defined )    | ternary( public_node_count,   ( private_node_count is defined ) | ternary( ( node_number | int ) - ( private_node_count | int ), node_number ) ) }}"
-private_node_number:            "{{ ( private_node_count is defined )   | ternary( private_node_count,  ( node_number | int ) - ( public_node_number | int ) ) }}"
+default_public_count:           1
+default_private_count:          0
+node_number:                    "{{ node_count                          | default( ( ( public_node_count | default( default_public_count ) ) | int ) + ( ( private_node_count | default( default_private_count ) ) | int ) ) }}"
+public_node_number:             "{{ public_node_count                   | default( ( node_number | int ) - ( ( private_node_count | default( default_private_count ) ) | int ) ) }}"
+private_node_number:            "{{ private_node_count                  | default( ( node_number | int ) - ( ( ( public_node_number > 0 ) | ternary( public_node_number, default_public_count ) ) | int ) ) }}"
